[tool.poetry]
name = "andersan-core"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2025.2"
pandas = "^2.2.3"
keras = "^3.9.2"
tensorflow = "^2.16.1"
andersan = {path = "../andersan"}
icecream = "^2.1.4"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
